--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "18",
     "react-dom": "18",
     "react-redux": "^7.2.4",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "cross-env": "^7.0.3"
