--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.0",
-    "next": "11.0.0",
+    "next": "^14.2.4",
     "react": "18",
     "react-dom": "18",
     "react-redux": "^7.2.4",
@@ -19,6 +19,9 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "eslint": "^9.5.0",
-    "eslint-config-next": "^14.2.4"
+    "eslint-config-next": "^14.2.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-prettier": "^5.1.3"
   }
 }
