--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.0",
+    "axios": "^1.7.2",
     "next": "^14.2.4",
     "react": "18",
     "react-dom": "18",
